--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -1,5 +1,5 @@
 .banner {
-  background-image: url(https://firebasestorage.googleapis.com/v0/b/musicianscdm.appspot.com/o/Rayden_banner2.jpg?alt=media&token=3a6b8904-34e6-4781-9419-a567022e0027);
+  background-image: url(https://img2.rtve.es/i/?w=1600&i=1634633493933.jpg);
   background-position: top center;
   background-size: cover;
   background-attachment: fixed;
